add test keys for docker.test

--- a/config/environment/development.env
+++ b/config/environment/development.env
@@ -45,13 +45,13 @@ DJANGO_SECRET_KEY=mysecretkey
 #####
 
 # Server name used in nginx.tmpl (./config/webserver/nginx.tmpl)
-NGINX_SERVER_NAME=localhost
+NGINX_SERVER_NAME=docker.test
 
 # Here you can specify the location of your SSL/TLS certificate and key.
 # This will be specified in the nginx.tmpl When specifying localhost it will
 # use the self-signed certificate provided by this project
-NGINX_CRT_NAME=localhost
-NGINX_KEY_NAME=localhost
+NGINX_CRT_NAME=docker.test
+NGINX_KEY_NAME=docker.test
 
 # Needed for the template, envsubst try to replace every $ in the template
 # also the one's that are necessary for nginx.
